<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Jams</string>

    <!-- Category name for Latino Music [CHAR LIMIT=20] -->
    <string name="latino">Latino</string>

    <!-- Category name for Video-Game Music[CHAR LIMIT=20] -->
    <string name="video_games">VideoGames</string>

    <!-- Category name for Anime Music[CHAR LIMIT=20] -->
    <string name="anime">Anime</string>

    <!-- Category name for Dance Music [CHAR LIMIT=20] -->
    <string name="dance">Dance</string>

    <!-- Category name for Old School Music [CHAR LIMIT=20] -->
    <string name="old_school">Old School</string>

    <!-- Category name for TV Shows & Films Music [CHAR LIMIT=20] -->
    <string name="soundtracks">Soundtracks</string>

    <!-- Category name for TV Shows & Films Music [CHAR LIMIT=20] -->
    <string name="welcome">Welcome to Jams</string>

    <!-- Category name for TV Shows & Films Music [CHAR LIMIT=20] -->
    <string name="select_categories">Please Select a Category</string>

    <string name="play_button">Play Button</string>

    <string name="album_image">Album Image</string>

</resources>
