<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_tan_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_categories" />

        <LinearLayout
            android:id="@+id/linearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/anime"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_anime"
                    android:text="@string/anime" />

                <TextView
                    android:id="@+id/video_games"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_video_games"
                    android:text="@string/video_games" />

                <TextView
                    android:id="@+id/dance"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_dance"
                    android:text="@string/dance" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/old_school"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_old_school"
                    android:text="@string/old_school" />

                <TextView
                    android:id="@+id/latino"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_latino"
                    android:text="@string/latino" />

                <TextView
                    android:id="@+id/films"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_films"
                    android:text="@string/films" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>